--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Acme&display=swap');
 *{margin: 0px;}
 body{
-    text-align: center;
+   align-items: center;
+    text-align:center;
+    height: 100vh;
+
 }
 nav{
 align-self: center;
@@ -13,17 +16,26 @@ li{
     font-size: 30pt;
     background-color: #F6F2AF;
     width:100%;
-    height: 50px;}
+    height: 50px;
+border-radius: 10px;}
 
 ul{
    text-align: center;
    padding: 0px;}
-.title{
-    background-color: teal;
-    width:240px;
-    height: 200px;
+h4{
+  padding: 25px;
+  text-align: center;
+  background-color: wheat;
+  width: 300px;
+  position: absolute;
+  left: 40%;
 }
+
 div{
     margin: 40px 0px;
-   justify-content: center;
+   text-align: center;
+    border-radius: 15px;
+    width: 100%;
+    height: 100px;
+    
 }
